cache provider kyc